# tauri-plugin-download

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  README.md  build.rs  eslint.config.cjs  package-lock.json  package.json  tsconfig.test.json
.cargo/: config.toml
.github/workflows/: ci.yml
android/: .gitignore  build.gradle.kts  settings.gradle
android/example/: build.gradle.kts
android/example/src/main/: AndroidManifest.xml
android/example/src/main/java/com/velocitysystems/downloadmanager/example/: DownloadsScreen.kt  DownloadsViewModel.kt  MainActivity.kt
android/example/src/main/java/org/silvermine/downloadmanager/example/: DownloadsScreen.kt  DownloadsViewModel.kt  (+1 more)
android/example/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
android/lib/: build.gradle.kts
android/lib/src/main/java/com/velocitysystems/downloadmanager/: DownloadActionResponse.kt  DownloadException.kt  DownloadItem.kt  DownloadManager.kt  DownloadStatus.kt  DownloadStore.kt  DownloadWorker.kt  UrlParser.kt
android/lib/src/main/java/org/silvermine/downloadmanager/: DownloadActionResponse.kt  DownloadException.kt  DownloadItem.kt  DownloadManager.kt  DownloadStatus.kt  DownloadStore.kt  DownloadWorker.kt  URIParser.kt  UrlParser.kt
android/lib/src/test/java/com/velocitysystems/downloadmanager/: UrlParserTest.kt
android/lib/src/test/java/org/silvermine/downloadmanager/: DownloadItemTest.kt  URIParserTest.kt  UrlParserTest.kt
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/main/java/org/silvermine/plugin/download/: DownloadPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
crates/connection-info/: Cargo.toml
crates/connection-info/src/: error.rs  lib.rs  types.rs  unsupported.rs  windows.rs
crates/download-manager/: Cargo.toml
crates/download-manager/src/: download.rs  downloader.rs  error.rs  lib.rs  manager.rs  models.rs  store.rs  url.rs  validate.rs
examples/tauri-app/: package-lock.json
examples/tauri-app/src/: DownloadView.vue
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: actions.ts  index.test.ts  index.ts  types.ts
ios/: Package.swift
ios-src/DownloadManagerExample/DownloadManagerExample/: AppDelegate.swift
ios-src/DownloadManagerKit/Sources/DownloadManagerKit/: BackgroundSessionHandler.swift  DownloadError.swift  DownloadItem.swift  DownloadManager.swift  DownloadStore.swift  UrlParser.swift
ios-src/DownloadManagerKit/Tests/DownloadManagerKitTests/: UrlParserTests.swift
ios/DownloadManagerExample/DownloadManagerExample/: DownloadsView.swift
ios/DownloadManagerKit/: Package.swift
ios/DownloadManagerKit/Sources/DownloadManagerKit/: BackgroundSessionHandler.swift  DownloadError.swift  DownloadItem.swift  DownloadManager.swift  DownloadProgressState.swift  DownloadSessionDelegate.swift  DownloadStatus.swift  DownloadStore.swift  Logger.swift  URLParser.swift
ios/DownloadManagerKit/Tests/DownloadManagerKitTests/: DownloadItemTests.swift  DownloadProgressStateTests.swift  DownloadTaskResumeOffsetStoreTests.swift  URLParserTests.swift
ios/Sources/: DownloadPlugin.swift
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
