[workspace]
members = ["crates/*"]
exclude = ["examples"]

[package]
name = "tauri-plugin-download"
version = "0.1.0"
description = "Resumable download manager for Tauri applications"
license = "MIT"
edition = "2024"
rust-version = "1.89"
links = "tauri-plugin-download"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
download-manager = { path = "crates/download-manager" }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.9.3" }
tauri-plugin-store = "2.2.0"
thiserror = "2.0.17"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin = { version = "2.5.1", features = ["build"] }
